maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:54: error: type mismatch;
 found   : Int(4)
 required: plm.universe.Direction
var t = Array[Direction](4)
                         ^JediEscaper:67: error: not found: value numcases
    numcases(0)=Integer.MAX_VALUE
    ^JediEscaper:73: error: not found: value numcases
    numcases(1)=Integer.MAX_VALUE
    ^JediEscaper:79: error: not found: value numcases
    numcases(2)=Integer.MAX_VALUE
    ^JediEscaper:85: error: not found: value numcases
    numcases(3)=Integer.MAX_VALUE
    ^JediEscaper:87: error: value MAX_Value is not a member of object Integer
  var min=Integer.MAX_Value
                  ^JediEscaper:95: error: Int does not take parameters
  setDirection(t(indiceMin()))
                          ^